# paper-brain

./: .gitignore  LOG.md  README.md  chain.py  chat.py  config.py  guardrails.py  main.py  pdf_processing.py  pyproject.toml  retriever.py  todo.md
chat_logs/: chat_history_20260510_201215.json  chat_history_20260510_201215.md  chat_history_20260510_202623.json  chat_history_20260510_202623.md  chat_history_20260510_203013.json  chat_history_20260510_203013.md  chat_history_20260510_205651.json  chat_history_20260510_205651.md  chat_history_20260510_205803.json  chat_history_20260510_212514.json  chat_history_20260510_212514.md  chat_history_20260510_212739.json  chat_history_20260510_215053.json  chat_history_20260510_215053.md  chat_history_20260510_215350.json  chat_history_20260510_215350.md  chat_history_20260510_215541.md
faiss_index/b78196b07c/: index.faiss  index.pkl
